--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -29,9 +29,17 @@ h1, h2 {
     width: 100%;
     max-width: 600px;
     height: auto;
-    border-radius: 10px;
+    border-radius: 15px; 
     margin-bottom: 20px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); 
+    border: 5px solid #0288d1; 
+    transition: transform 0.3s ease; 
 }
+
+    .section-image:hover {
+        transform: scale(1.05); 
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3); 
+    }
 
 
 .navbar {
